<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">WeatherTaskApp</string>
    <string name="download_in_progress">Download in progress</string>
    <string name="no_network_connection">Oops no network connection</string>
    <string name="no_results">No results</string>
    <string name="enter_city_name">Search city name</string>
    <string name="location_permission_dialog_title">Location Permission</string>
    <string name="location_permission_prompt">You need to grant location permission in order to get your city weather</string>
    <string name="set_custom_location">You can set custom location in App Settings</string>
    <string name="icon">weather_icon</string>
    <string name="retry">Retry</string>
    <string name="loading_weather">Loading weather</string>
    <string name="precipitation">Precipitation</string>
    <string name="visibility">Visibility</string>
    <string name="wind">Wind</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="no_internet">Check your internet connection</string>
    <string name="location_not_available">Device location not available</string>
    <string name="gps_enable_prompt">You need to enable GPS in order to get weather updates</string>
    <string name="appwidget_text">weather condition</string>
    <string name="condition_text">condition_text</string>
    <string name="no_data">No data</string>
    <string name="forecast">Forecast:</string>
    <string name="data_fetch_failed">Data fetch failed.\nPlease check your internet connection and try again.\n\nSwipe down to retry 🙂</string>
    <string name="about">About</string>
    <string name="version">Version 1.0</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="weatherDetails">weatherDetails</string>
    <string name="weatherCity">weatherCity</string>
    <string name="textInput_cityNames_hint">Enter City names seperated by , (min 3, max 7)</string>
    <string name="recyclerRow_cityName"> %1$s</string>
    <string name="recyclerRow_description">%1$s</string>
    <string name="recyclerRow_windSpeed">Wind Speed : %1$s M/s</string>
    <string name="recyclerRow_minTemp">Temperature Min : %1$s C \u00B0</string>
    <string name="maxTemp">Temperature Max : %1$s C \u00B0</string>
    <string name="textView_currentCity">Current City : %1$s</string>

</resources>
