<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipe_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="6dp"
    app:cardElevation="@dimen/dimen_8"
    android:layout_margin="@dimen/dimen_8"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_cityName"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dimen_8"
            android:text="@string/recyclerRow_cityName"
            android:textColor="@color/black1"
            android:textSize="@dimen/textSize_18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_weatherDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8"
            android:layout_marginTop="@dimen/dimen_8"
            android:layout_marginEnd="@dimen/dimen_8"
            android:text="@string/recyclerRow_description"
            android:textColor="@color/black1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_cityName" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_windSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8"
            android:layout_marginTop="@dimen/dimen_8"
            android:layout_marginEnd="@dimen/dimen_8"
            android:text="@string/recyclerRow_windSpeed"
            android:textColor="@color/black1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_weatherDescription" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_tempMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8"
            android:layout_marginTop="@dimen/dimen_8"
            android:text="@string/recyclerRow_minTemp"
            android:textColor="@color/black1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_windSpeed" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_tempMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8"
            android:layout_marginTop="@dimen/dimen_8"
            android:layout_marginEnd="@dimen/dimen_8"
            android:text="@string/maxTemp"
            android:textColor="@color/black1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_tempMin" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--  <FrameLayout
          android:id="@+id/delete_layout"
          android:layout_width="70dp"

          android:layout_height="match_parent"
          android:background="@drawable/border_delet">

          <ImageView
              android:layout_width="40dp"
              android:layout_height="40dp"
              android:layout_gravity="center"
              android:gravity="center"
              android:src="@drawable/ic_delete_sweep_black_24dp"
              android:textColor="@android:color/white" />
      </FrameLayout>-->
    <!--    <RelativeLayout-->
    <!--        android:id="@+id/delete_layout"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        >-->

    <!--        <TextView-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="match_parent"-->

    <!--            android:background="@color/red_300"-->
    <!--            android:gravity="center"-->
    <!--            android:text="@string/delete_city"-->
    <!--            android:textColor="@android:color/white" />-->
    <!--    </RelativeLayout>-->

    <!--    <RelativeLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content">-->

    <!--        <LinearLayout-->
    <!--            android:id="@+id/linLayout"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:background="@drawable/border_white"-->
    <!--            android:gravity="center"-->
    <!--            android:orientation="horizontal"-->
    <!--            android:padding="10dp">-->

    <!--            <LinearLayout-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="match_parent"-->
    <!--                android:layout_marginStart="10dp"-->
    <!--                android:layout_marginLeft="10dp"-->
    <!--                android:layout_weight=".4"-->
    <!--                android:gravity="center"-->
    <!--                android:orientation="vertical">-->

    <!--                <LinearLayout-->
    <!--                    android:layout_width="wrap_content"-->
    <!--                    android:layout_height="wrap_content"-->
    <!--                    android:layout_margin="5dp"-->
    <!--                    android:orientation="horizontal">-->

    <!--                    <TextView-->
    <!--                        android:id="@+id/tv_city_name"-->
    <!--                        android:layout_width="wrap_content"-->
    <!--                        android:layout_height="wrap_content"-->
    <!--                        android:gravity="center"-->
    <!--                        android:maxLines="1"-->
    <!--                        android:text="dfsvglkjdflkg"-->
    <!--                        android:textSize="13sp" />-->

    <!--                    <TextView-->
    <!--                        android:id="@+id/tv_country_name"-->
    <!--                        android:layout_width="wrap_content"-->
    <!--                        android:layout_height="wrap_content"-->
    <!--                        android:gravity="center"-->
    <!--                        android:maxLines="1"-->
    <!--                        android:text="df"-->
    <!--                        android:textSize="13sp" />-->
    <!--                </LinearLayout>-->

    <!--                <TextView-->
    <!--                    android:id="@+id/tv_status"-->
    <!--                    android:layout_width="wrap_content"-->
    <!--                    android:layout_height="wrap_content"-->
    <!--                    android:layout_margin="5dp"-->
    <!--                    android:gravity="left|start"-->
    <!--                    android:maxLines="1"-->
    <!--                    android:textSize="13sp" />-->


    <!--            </LinearLayout>-->

    <!--            <ImageView-->
    <!--                android:id="@+id/iv_weather_icon"-->
    <!--                android:layout_width="150dp"-->
    <!--                android:layout_height="120dp"-->
    <!--                android:layout_centerInParent="true"-->
    <!--                android:layout_marginTop="10dp"-->
    <!--                android:layout_weight=".3"-->


    <!--                />-->

    <!--            <TextView-->
    <!--                android:id="@+id/temp"-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="match_parent"-->
    <!--                android:layout_alignParentRight="true"-->
    <!--                android:layout_centerHorizontal="true"-->
    <!--                android:layout_centerVertical="true"-->
    <!--                android:layout_marginEnd="5dp"-->
    <!--                android:layout_marginRight="5dp"-->
    <!--                android:layout_weight=".3"-->
    <!--                android:gravity="center"-->

    <!--                android:maxLines="1"-->
    <!--                android:text="25"-->
    <!--                android:textSize="16sp" />-->


    <!--        </LinearLayout>-->
    <!--    </RelativeLayout>-->

</androidx.cardview.widget.CardView>